changed scaffold and masthead with important tag in hopes of fixing text overflow on 320px iOs

--- a/_sass/scaffolds.scss
+++ b/_sass/scaffolds.scss
@@ -229,6 +229,10 @@ li.sticky-nav{
   margin-bottom: 20vh;
 }
 
+.masthead {
+  word-break: normal !important;
+}
+
 .dropcap{
   float: left;
   font-size: 75px;
